--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <title>Feed Reader - no queueing</title>
+  <title>Queueing Feed Reader</title>
   <%= stylesheet_link_tag 'main' %>
 </head>
 <body>
