--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <title>Queueing Feed Reader</title>
   <%= stylesheet_link_tag 'main' %>
+  <%= javascript_include_tag 'prototype' %>
+  <%= javascript_include_tag 'application' %>
 </head>
 <body>
   <%= yield %>
