304 instead of 204 when polling; use stale? for validation
Pretty good change. Shows off using the newish
ActionController::Base#stale? method to validate the
If-Not-Modified value.

I thought we could get rid of the Last-Modified tracking all
together but the first response to an individual feed refresh
after a full page load would always return 200.

--- a/app/views/feeds/_feed.html.erb
+++ b/app/views/feeds/_feed.html.erb
@@ -5,7 +5,7 @@
       <span class="last_updated"><%= time_ago_in_words(feed.updated_at) %> ago | </span>
       <span class="refresh">
         <%= link_to_function "refresh", "refresh_feed(this)",
-                             :feed_id => feed.id, :last_modified => feed.updated_at %>
+                             :feed_id => feed.id, :last_modified => feed.updated_at.httpdate %>
       </span>
     </div>
   </div>
